# plink

./: Cargo.toml  readme.md  setup.md
database/: Cargo.toml  schema.sql
database/src/: lib.rs  models.rs
process/: Cargo.toml
process/src/: lib.rs
process_cli/: Cargo.toml
process_cli/src/: main.rs
scripts/: parse_song_names.py  parse_song_single.py  pyproject.toml  single_wrapper.sh  util.py
