[package]
name = "process_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
symphonia = { version = "0.5.4", features = ["mp3", "opt-simd"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
process = { path = "../process/" }
image = { version = "0.25.1", default-features = false, features = ["png"] }
tokio = { version = "1.38.0", features = ["full"] }
database = { path = "../database/" }
sqlx = { version = "0.7.4", features = ["runtime-tokio"], default-features = false }
clap = { version = "4.5.7", features = ["cargo", "derive"] }
time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
rubato = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3.30"
