[package]
name = "process_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
symphonia = { version = "0.5", features = ["mp3", "opt-simd"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
process = { path = "../process/" }
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1.38", features = ["full"] }
database = { path = "../database/" }
sqlx = { version = "0.7", features = ["runtime-tokio"], default-features = false }
clap = { version = "4.5", features = ["cargo", "derive"] }
time = { version = "0.3", features = ["macros", "parsing", "serde"] }
rubato = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
